# projector_calibration

./: .gitignore  CMakeLists.txt  Doxyfile  manifest.xml  rosbuild.cmake
cfg/: params.cfg  params.cfgc
cfg/cpp/projector_calibration/: visualization_paramsConfig.h
include/projector_calibration/: calib_eval.h  calibration.h  calibration_utils.h  gl_mesh_viewer.hpp.gch  main_window.hpp  projector_calibrator.h  qnode.hpp  stat_eval.h  user_input.h
launch/: test.launch
src/: calib_eval.cpp  calibration.cpp  calibration_utils.cpp  gl_mesh_viewer.cpp  glfractal.cpp  main.cpp  main_window.cpp  projector_calibrator.cpp  qnode.cpp  user_input.cpp
ui/: main_window.ui
